fix hint's z-index

--- a/src/Components/Hint/Hint.css
+++ b/src/Components/Hint/Hint.css
@@ -4,6 +4,7 @@
 	position: absolute;
 	right: -435px;
 	top: -13px;
+	z-index: 1;
 }
 
 .hint.active {
